Discount: Fixed styling to be displayed on iphone

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -351,26 +351,23 @@ a.item {
 section#product figure[data-discount]:after,
 a.item[data-discount]:after {
 	display: inline-block;
-	width: 100px;
-	height: 15px;
-	padding-left: 15px;
-	padding-top: 80px;
+	width: 50px;
+	height: 50px;
 	content: attr(data-discount) "%";
 	position: absolute;
-	top: -55px;
-	left: -60px;
-
+	top:  -1px;
+	left: -5px;
+	padding-right: 5px;
 	background-image: url(../images/shape.svg);
 	background-position: bottom center;
-	background-size: 200px 200px;
+	background-size: 50px 50px;
 	background-repeat: no-repeat;
 
 	color: white;
 	font-size: 1em;
 	font-weight: bold;
 	text-align: center;
-	line-height: 0;
-	transform: rotate(-30deg);
+	line-height: 2.5em;
 }
 
 div#unique {
